--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,12 @@ ext {
     materialVersion = '1.2.1'
     recyclerViewVersion = '1.1.0'
     glideVersion = '4.11.0'
+    androidCoreTestVersion = '2.1.0'
+    idleResourceVersion = '3.2.0'
     androidXTestVersion = '1.2.0'
+    mockitoVersion = '3.6.0'
+    mockitoKotlinVersion = '2.2.0'
+
 }
 
 allprojects {
