fixed comment from submission 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,9 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        buildConfigField "String", "FILM_TOKEN", "\"f936a5466a7c2551520a62d141eabc77\""
     }
 
     buildTypes {
