--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -70,6 +71,10 @@ dependencies {
     implementation "androidx.test.espresso:espresso-idling-resource:$idleResourceVersion"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
+    //arch component
+    implementation "androidx.room:room-runtime:$roomRuntimeVersion"
+//    kapt "androidx.room:room-compiler:$roomVersion"
 
 
 
