--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ ext {
     androidXTestVersion = '1.2.0'
     mockitoVersion = '3.6.0'
     mockitoKotlinVersion = '2.2.0'
+    roomRuntimeVersion = '2.2.5'
+    roomVersion = '2.2.3'
 
 }
 
