--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
 
     //arch component
     implementation "androidx.room:room-runtime:$roomRuntimeVersion"
-//    kapt "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 
 
 
