--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext {
     mockitoKotlinVersion = '2.2.0'
     roomRuntimeVersion = '2.2.5'
     roomVersion = '2.2.3'
+    pagingVersion = '2.1.1'
 
 }
 
